# OS

lab2/: README.md  a.out  main.c  test1.txt  test2.txt
os_exercise_01/doc/: report.docx
os_exercise_02/doc/: report.docx
os_exercise_02/src/: a.out  main.c
os_exercise_03/doc/: report.docx
os_exercise_03/src/: MTimSort.h  TimSort.h  banchmark.c  generator.py
os_exercise_03/test/: ANS1  ANS2  TEST1  TEST2
os_exercise_04/doc/: report.docx
os_exercise_04/src/: generator.py  main.c
os_exercise_04/test/: test
os_exercise_05/doc/: report.docx
os_exercise_05/src/: CMakeLists.txt  lib1.c  lib1.h  lib2.c  lib2.h  mainDyn.c  mainStat.c
os_exercise_0678/doc/: report.docx
os_exercise_0678/src/: CMakeLists.txt  client.c  server.c
os_exercise_0678/test/: test1.txt
os_kp_01/doc/: report.docx
os_kp_01/src/: progA.c  progB.c  progC.c  term.h
os_kp_01/test/: test.txt
